прописала навигацию header

--- a/style/style.css
+++ b/style/style.css
@@ -64,7 +64,11 @@ body {
 
 .navigation-logo {}
 
-.header__navigation-list {}
+.header__navigation-list {
+   display: flex;
+   flex-direction: row;
+   flex: 1;
+}
 
 .phone {
 	color: #510fad;
