--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,10 @@
     font-style: italic;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 a {
 	text-decoration: none;
 }
@@ -33,6 +37,7 @@ body {
 	font-size: 16px;
 	line-height: 30px;
 	margin: 0;
+	background: #ede9e0;
 }
 
 .wrapper {
@@ -43,40 +48,35 @@ body {
 	background-repeat: no-repeat;
 	background-position: 20px 0;
 }
-
-
-.header {
-	display: flex;
-}
-
+.header {}
 .container {
-	display: flex;
 	width: 940px;
 	margin: 0 auto;
 }
-
 .row {
 	display: flex;
+	flex: 1;
 	flex-direction: row;
 	flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
 }
-
-.navigation-logo {
-	flex: 1;
+.navigation-logo {}
+nav {
+	display: flex;
 }
-
 .header__navigation-list {
    display: flex;
-   flex-direction: row;
-   flex: 1;
+   margin: 0;
+   padding: 0;
 }
-
+ul li {
+	display: flex;
+	padding: 0 10px;
+}
 .phone {
-	flex: 2;
 	color: #510fad;
 }
-
 .phone:hover {
 	color: #737274;
 }
