--- a/style/style.css
+++ b/style/style.css
@@ -32,8 +32,6 @@ a {
 
 body {
 	font-family: "Roboto", sans-serif;
-	font-weight: normal;
-    font-style: normal;
 	font-size: 16px;
 	line-height: 30px;
 	margin: 0;
@@ -41,40 +39,46 @@ body {
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
 	width: 1024px;	
 	margin: 0 auto;	;
 	background-repeat: no-repeat;
 	background-position: 20px 0;
 }
-.header {}
+.header {
+	padding-top: 10px;
+}
 .container {
 	width: 940px;
 	margin: 0 auto;
 }
 .row {
 	display: flex;
-	flex: 1;
 	flex-direction: row;
 	flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
 }
 .navigation-logo {}
-nav {
+.header__navigation {
 	display: flex;
+	flex-grow: 1;
+	align-items: center;
+	justify-content: flex-end;
+	padding-right: 20px;
 }
 .header__navigation-list {
    display: flex;
    margin: 0;
    padding: 0;
+   list-style: none;
 }
-ul li {
-	display: flex;
+.header__navigation-item {
 	padding: 0 10px;
 }
+.header__navigation-link {
+	color: #202020;
+}
 .phone {
+	display: flex;
+	align-items: center;
 	color: #510fad;
 }
 .phone:hover {
