--- a/style/style.css
+++ b/style/style.css
@@ -146,13 +146,17 @@ h1 {
 	max-width: 470px;
 	box-shadow: -10px -10px 40px 0px #2d0861,
 				1px 0px 0px 0px #490e9d;
-	flex-grow: 1;
 }
 .about__description {
 	display: flex;
-	flex-grow: 1;
+	flex-wrap: wrap;
+	margin-left: 20px;
+	max-width: 460px;
 }
 .about__list {
+	margin-top: 20px;
+	margin-bottom: 40px;
+	padding-left: 20px;
 	list-style: none;
 	list-style-type: disc;
 	color: #fff;
