--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,6 @@ h1 {
 	letter-spacing: 50;
 	line-height: 30px;
 	text-transform: uppercase;
-
 }
 .about {
 	background-color: #510fad;
@@ -122,12 +121,11 @@ h1 {
 	padding-bottom: 120px;
 }
 .about__title {
-	margin-left: 340px;
-	margin-bottom: 75px;
-	width: 370px;
-	min-height: 120px;
+	margin: 0 auto 75px;
+	width: 360px;
 }
 .about__head {
+	margin-top: 0;
 	font-family: "Fira Sans", sans-serif;
 	font-weight: 500;
 	font-style: normal;
@@ -145,10 +143,12 @@ h1 {
 	line-height: 30px;
 	color: #b8adc8;
 }
-.about__image {}
+.about__image {
+	flex-basis: 50%;
+}
 .about__image img {
 	border-radius: 10px;
-	max-width: 470px;
+	max-width: 100%;
 	box-shadow: -10px -10px 40px 0px #2d0861,
 				1px 0px 0px 0px #490e9d;
 }
@@ -156,7 +156,7 @@ h1 {
 	display: flex;
 	flex-wrap: wrap;
 	margin-left: 20px;
-	max-width: 460px;
+	max-width: 40%;
 }
 .about__list {
 	margin-top: 20px;
