--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,6 @@ body {
 .main {}
 
 .promo {
-	width: 940px;
 	min-height: 560px;
 }
 .promo__inner {
@@ -241,6 +240,7 @@ h1 {
 	font-size: 36px;
 	letter-spacing: 50;
 	line-height: 40px;
+	text-align: center;
 }
 
 .reviews__item {}
