--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,7 @@ body {
 
 .wrapper {
 	width: 1024px;	
-	margin: 0 auto;	;
+	margin: 0 auto;	
 	background-repeat: no-repeat;
 	background-position: 20px 0;
 }
@@ -232,7 +232,6 @@ h1 {
 }
 
 .reviews {}
-
 .reviews__head {
 	font-family: "Fira Sans", sans-serif;
 	font-weight: 500;
@@ -242,9 +241,9 @@ h1 {
 	line-height: 40px;
 	text-align: center;
 }
-
-.reviews__item {}
-
+.reviews__item {
+	max-width: 50%;
+}
 .reviews__item-name {
 	font-family: "Fira Sans", sans-serif;
 	font-weight: 500;
@@ -252,11 +251,25 @@ h1 {
 	font-size: 24px;
 	letter-spacing: 50;
 	line-height: 40px;
+	margin: 0;
 }
-
-.time {}
-
-.reviews__image {}
+time {
+    font-style: italic;
+	color: #b8adc8;
+}
+.reviews__item-message {
+	margin-right: 20px;
+	margin-left: 0;
+	margin: 0 24px 0 0;
+}
+.reviews__image {
+	flex-basis: 50%;
+}
+.reviews__image img {
+	border-radius: 10px;
+	max-width: 100%;
+	box-shadow: -10px -10px 30px 2px #c4c1b9;
+}
 
 .reviews__title {
 	font-family: "Roboto", sans-serif;
@@ -265,15 +278,26 @@ h1 {
 	font-size: 16px;
 	letter-spacing: 50;
 	line-height: 30px;
+	text-align: right;
 }
-
 .reviews__link {
 	color: #510fad;
 }
-
 .reviews__link:hover {
 	color: #737274;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 .blog{
 	width: 940px;
