--- a/style/style.css
+++ b/style/style.css
@@ -247,6 +247,7 @@ h1 {
 }
 .reviews__item {
 	max-width: 50%;
+	background-image: url(../images/reviews_apostrophe.png);
 	background-repeat: no-repeat;
 	background-position: 10px 0px;
 	background-size: 75px;
@@ -302,16 +303,18 @@ time {
 }
 
 .blog{
+	background-image: url(../images/bg.blog.png);
 	background-repeat: repeat;
 }
 .blog__inner {
 	padding-top: 100px;
 	padding-bottom: 100px;
+	justify-content: space-between;
 }
 .blog__info {
 	display: flex;
 	align-items: center;
-	max-width: 50%;
+	max-width: 48%;
 }
 .blog__description {}
 .blog__head {
@@ -336,15 +339,46 @@ time {
 .sprite_social {}
 .blog__post {
 	display: flex;
-	width: 50%;
+	justify-content: space-between;
+	width: 48%;
 }
 .blog__card {
+	display: flex;
 	flex-shrink: 0;
-	background-color: #fff;
+	flex-basis: 48%;	
+	box-shadow: 0px 0px 10px 2px #420c8c;
+}
+.blog__card:hover {
+	display: flex;
+	flex-shrink: 0;
+	flex-basis: 48%;	
+	box-shadow: -10px 10px 40px 3px #390c77,
+				10px -10px 40px 3px #390c77;
+}
+.blog__card-link {
+	display: flex;
+	flex-direction: column;
+}
+.blog__card-img {
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+	overflow: hidden;
+	width: 100%;
+	height: 160px;
+	object-fit: cover;
 }
 .blog__item {
+	display: flex;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	flex-direction: column;
+	flex-grow: 1;
+	padding: 20px 10px;
+	background-color: #fff;
 }
 .blog__item-inner {
+	flex-grow: 1;
+	margin-top: 0;
 	font-family: "Roboto", sans-serif;
 	font-weight: normal;
     font-style: normal;
