--- a/style/style.css
+++ b/style/style.css
@@ -170,7 +170,7 @@ h1 {
 .about__list-item {}
 .button {
 	position: relative;
-	padding-right: 50px;
+	padding-right: 40px;
 	font-family: "Fira Sans", sans-serif;
 	font-weight: 500;
 	font-size: 16px;
@@ -183,7 +183,7 @@ h1 {
 	top: 0;
 	bottom: 0;
 	right: 0;
-	width: 30px;
+	width: 20px;
 }
 .arrow:before,
 .arrow:after {
@@ -195,7 +195,7 @@ h1 {
 	margin: auto;
 }
 .arrow:before {
-	width: 30px;
+	width: 20px;
 	height: 2px;
 	background-color: currentColor;
 }
@@ -453,6 +453,7 @@ time {
 	color: #202020;
 }
 .button--post {
+	width: 150px;
 	color: #510fad;
 }
 .button--post:hover {
@@ -500,6 +501,8 @@ address {
 
 .footer {
 	border-top: 1px solid #b8adc8;
+	width: 940px;
+	margin: 0 auto;
 }
 .footer__navigation {
 	display: flex;
@@ -509,7 +512,7 @@ address {
     flex-grow: 1;
     align-items: center;
     justify-content: flex-start;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 .footer__navigation-list {
     display: flex;
@@ -530,3 +533,20 @@ address {
 	display: flex;
 	align-items: center;
 }
+.footer__social-vk {
+	background-position: -272px -2px;	
+}
+.footer__social-fb {
+	background-position: -32px -2px;
+}
+.footer__social-inst {
+	background-position: -152px -2px;
+}
+.footer__social-vk:hover {
+	background-position: -302px -2px;	
+}
+.footer__social-fb:hover {
+	background-position: -92px -2px;
+}
+.footer__social-inst:hover {
+	background-position: -212px -2px;
