--- a/style/style.css
+++ b/style/style.css
@@ -87,9 +87,6 @@ body {
 }
 
 .main {}
-section {
-	margin: 80px 0;
-}
 .promo {
 	min-height: 560px;
 }
@@ -118,29 +115,34 @@ h1 {
 	text-transform: uppercase;
 }
 .about {
-	/*position: relative;*/
+	position: relative;
+	display: flex;
 	background-color: #510fad;
+	margin: 80px 0;
 	padding-top: 120px;
 	padding-bottom: 120px;
 }
-/*.about__img {
+.about:before {
+	content:"";
 	position: absolute;
 	background-image: url(../images/bg_about.svg);
-}
-.about__img:before {
-	height: 100%;
+	height: 80px;
 	left: 0;
 	right: 0;
 	top: -80px;
-	background-position: 0 0;
+	background-size: 100%;
 }
-.about__img:after {
-	height: 100%;
+.about:after {
+	content:"";
+	position: absolute;
+	background-image: url(../images/bg_about.svg);
+	height: 80px;
 	left: 0;
 	right: 0;
 	bottom: -80px;
-	background-position: 0 0;
-}*/
+	background-size: 100%;	
+	background-position: 0 bottom;
+}
 .about__title {
 	margin: 0 auto 75px;
 	width: 360px;
@@ -237,7 +239,9 @@ h1 {
 	color: #b8adc8;
 }
 
-.animals {}
+.animals {
+	padding: 80px 0;
+}
 .animals__head {
 	font-family: "Fira Sans", sans-serif;
 	font-weight: 500;
@@ -288,7 +292,9 @@ h1 {
 	color: #737274;
 }
 
-.reviews {}
+.reviews {
+	padding: 80px 0;
+}
 .reviews__head {
 	margin-top: 0;
 	margin-bottom: 20px;
@@ -358,6 +364,7 @@ time {
 }
 
 .blog{
+	padding: 80px 0;
 	background-image: url(../images/bg.blog.png);
 	background-repeat: repeat;
 }
@@ -478,7 +485,9 @@ time {
 	color: #737274;
 }
 
-.contacts {}
+.contacts {
+	padding: 80px 0;
+}
 .contacts__head {
 	margin-top: 0;
 	margin-bottom: 20px;
