--- a/style/style.css
+++ b/style/style.css
@@ -122,16 +122,7 @@ h1 {
 	padding-top: 120px;
 	padding-bottom: 120px;
 }
-.about:before {
-	content:"";
-	position: absolute;
-	background-image: url(../images/bg_about.svg);
-	height: 80px;
-	left: 0;
-	right: 0;
-	top: -80px;
-	background-size: 100%;
-}
+.about:before,
 .about:after {
 	content:"";
 	position: absolute;
@@ -139,8 +130,13 @@ h1 {
 	height: 80px;
 	left: 0;
 	right: 0;
+	background-size: 100%;
+}
+.about:before {
+	top: -80px;
+}
+.about:after {
 	bottom: -80px;
-	background-size: 100%;	
 	background-position: 0 bottom;
 }
 .about__title {
